refactor: remove unused getFilteredRecords method from analytics services